--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title:            Site Title
-description:      Describe your website.
+title:            Gen's Blog
+description:      Welcome my blog.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://cameogen.github.io
 disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Gen Lin
   avatar:         bio-photo.jpg
   bio:            "Describe your self."
-  email:          your@email.com
+  email:          dteout@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
-  facebook:
-  github:
+  facebook:       cameogen
+  github:         cameogen
   stackoverflow:
   linkedin:
   instagram:
