--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Gen's Blog
 description:      Welcome my blog.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://cameogen.github.io
-disqus_shortname:
+disqus_shortname: cameogen
 
 # Owner/author information
 owner:
