--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://cameogen.github.io
+url:              http://beemolin.github.io
 disqus_shortname: cameogen
 
 # Owner/author information
 owner:
-  name:           Gen Lin
+  name:           Beemo Lin
   avatar:         bio-photo.jpg
   bio:            "Do something interesting."
   email:          dteout@gmail.com
@@ -12,7 +12,7 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:       cameogen
-  github:         cameogen
+  github:         beemolin
   stackoverflow:
   linkedin:
   instagram:
